[package]
name = "petgraph-fsm"
version = "0.1.0"
authors = ["Timothy Hobbs"]
edition = "2018"
license = "LGPL-3.0-or-later"
description = "Programmable finite state machines (automata) for rust"
homepage = "https://github.com/timthelion/petgraph-fsm"
repository = "https://github.com/timthelion/petgraph-fsm"


[features]
evcxr = ["petgraph-evcxr"]
select = ["petgraph-overlay"]
default = []

[dependencies]
petgraph = ">=0.5.1"
petgraph-evcxr = {path="../petgraph-evcxr", optional=true}
petgraph-overlay = {path="../petgraph-overlay", optional=true}
